# alpha-platform

./: LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
configs/: universe.yaml
data/features/: universe_features.parquet
data/raw/: universe_daily.parquet
data/reports/: backtest_results.parquet  backtest_results_trend.parquet
docs/: DECISIONS.md  SPEC.md
notebooks/: 01_data_exploration.ipynb  02_feature_exploration.ipynb  03_backtest_tearsheet.ipynb
src/alpha_platform/: cli.py
src/alpha_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/alpha_platform/backtest/: engine.py
src/alpha_platform/data/: ingestion.py
src/alpha_platform/features/: builder.py
src/alpha_platform/signals/: baselines.py
tests/: test_data_ingestion.py  test_features.py
