[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-platform"
version = "0.1.0"
description = "Daily-data systematic trading research platform"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "yfinance",
  "scikit-learn",
  "matplotlib",
  "scipy",
  "pydantic",
  "typer",
  "rich",
  "PyYAML",
]

[project.scripts]
alpha = "alpha_platform.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

